Updating text within

--- a/schoeyz12.html
+++ b/schoeyz12.html
@@ -5,8 +5,11 @@
 </head>
 <body>
 
-<h1>This is a Heading ZZ</h1>
-<p>This is a paragraph. ZZ</p>
+<h1>Kelly's Homeworks</h1>
+<p>HWs 3</p>
+<p>HWs 6</p>
+<p>HWs 8</p>
+<p>HWs 9</p>
 
 </body>
 </html>
