Added a table for homeworks to test out tables

--- a/schoeyz12.html
+++ b/schoeyz12.html
@@ -2,6 +2,24 @@
 <html>
 <head>
 <title>Kelly's Homeworks</title>
+<style>
+table {
+font-family: arial, sans-serif;
+border-collapse: collapse;
+width: 100%;
+}
+
+td, th {
+border: 1px solid #dddddd;
+text-align: left;
+padding: 8px;
+}
+
+tr:nth-child(even) {
+background-color: #dddddd;
+}
+</style>
+
 </head>
 <body>
 
@@ -9,7 +27,30 @@
 <p>HW #3:</p>
 <p>HW #6:</p>
 <p>HW #8:</p>
-<p>HW #9:/p>
+<p>HW #9:</p>
+
+<table>
+  <tr>
+    <th> Homework </th>
+    <th> link </th>
+  </tr>
+  <tr>
+    <td>HW #3:</td>
+    <td>link</td>
+  </tr>
+  <tr>
+    <td>HW #6:</td>
+    <td>link</td>
+  </tr>
+  <tr>
+    <td>HW #8:</td>
+    <td>link</td>
+  </tr>
+  <tr>
+    <td>HW #9:</td>
+    <td>link</td>
+  </tr>
+</table>
 
 </body>
 </html>
