--- a/schoeyz12.html
+++ b/schoeyz12.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Kelly's Homeworks</title>
+<title>Kelly's CSCI571 Homeworks</title>
 <style>
 table {
 font-family: arial, sans-serif;
