--- a/zoeyschoey.html
+++ b/zoeyschoey.html
@@ -1,2 +1,31 @@
-zoeyschoey.com coming soon.
-Zoey is a good girl.
+<!DOCTYPE html>
+<html>
+<head>
+<title>Zoey the Dog</title>
+<style>
+table {
+font-family: arial, sans-serif;
+border-collapse: collapse;
+width: 100%;
+}
+
+td, th {
+border: 1px solid #dddddd;
+text-align: left;
+padding: 8px;
+}
+
+tr:nth-child(even) {
+background-color: #dddddd;
+}
+</style>
+
+</head>
+<body>
+
+<h1>Zoey is a good girl</h1>
+<p>woof</p>
+
+
+</body>
+</html>
