--- a/zoeyschoey.html
+++ b/zoeyschoey.html
@@ -1,30 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Zoey the Dog</title>
-<style>
-table {
-font-family: arial, sans-serif;
-border-collapse: collapse;
-width: 100%;
-}
-
-td, th {
-border: 1px solid #dddddd;
-text-align: left;
-padding: 8px;
-}
-
-tr:nth-child(even) {
-background-color: #dddddd;
-}
-</style>
+<title>Zoey is a good girl</title>
 
 </head>
 <body>
 
-<h1>Zoey is a good girl</h1>
-<p>woof</p>
+<h1>Woof -Zoey</h1>
 
 
 </body>
