Updated Header and Navigation links

--- a/3333_wh_ks.html
+++ b/3333_wh_ks.html
@@ -7,13 +7,54 @@
     h2 {text-align: Left;}
     p {text-align: center;}
     div {text-align: Left;}
+
+    /* Style the header */
+      .header {
+        color: Blue;
+        padding: 20px;
+        text-align: center;
+      }
+
+     /* Style the top navigation bar */
+      .topnav {
+        overflow: hidden;
+        background-color: PeachPuff;
+      }
+
+      /* Style the Navigation links */
+      .topnav a {
+        float: left;
+        display: block;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+
+      /* Change color on hover */
+      .topnav a:hover {
+        background-color: #ddd;
+        color: black;
+      }
+
   </style>
 </head>
+
+
   <body>
 
-    <h1>Trojan Cafe</h1>
-    <div>This is a div.</div>
-    <p style="background-color:PeachPuff;text-align:Left"> Home Italian Indian Japanese Desserts About <a href="http://www.usc.edu">Contact</a></p>
+    <div class="header">
+      <h1>Trojan Cafe</h1>
+    </div>
+
+    <div class="topnav">
+      <a href="#">Home</a>
+      <a href="#">Italian</a>
+      <a href="#">Japanese</a>
+      <a href="#">Japanese</a>
+      <a href="#">Japanese</a>
+      <a href="#">Japanese</a>
+    </div>
+
     <p>Enjoy the Scenic View!!</p>
     <div>This is a div.</div>
     <p><a href="http://www.usc.edu"> Explore Our Delicious Cuisines</a></p>
