--- a/3333_wh_ks.html
+++ b/3333_wh_ks.html
@@ -5,7 +5,7 @@
   <style>
     h1 {text-align: center;}
     h2 {text-align: Left;}
-    p {text-align: center;}
+    p {text-align: Left;}
     div {text-align: Left;}
 
     /* Style the header */
@@ -32,9 +32,22 @@
 
       /* Change color on hover */
       .topnav a:hover {
-        background-color: #ddd;
         color: black;
       }
+
+    /* Create three equal columns that floats next to each other */
+    .column {
+      float: left;
+      width: 45%;
+      padding: 15px;
+    }
+
+    /* Clear floats after the columns */
+    .row:after {
+      content: "";
+      display: table;
+      clear: both;
+    }
 
   </style>
 </head>
@@ -50,15 +63,27 @@
       <a href="#">Home</a>
       <a href="#">Italian</a>
       <a href="#">Japanese</a>
-      <a href="#">Japanese</a>
-      <a href="#">Japanese</a>
-      <a href="#">Japanese</a>
+      <a href="#">Desserts</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
     </div>
 
     <p>Enjoy the Scenic View!!</p>
     <div>This is a div.</div>
     <p><a href="http://www.usc.edu"> Explore Our Delicious Cuisines</a></p>
     <div>This is a div.</div>
+
+    <div class="row">
+      <div class="column">
+        <h2>Picture of Food</h2>
+        <p>Image of food to coming soon.</p>
+      </div>
+
+      <div class="column">
+        <h2>Italy</h2>
+        <p>Description of Italian Food coming soon. Description of Italian Food coming soon. Description of Italian Food coming soon.</p>
+      </div>
+
 
   </body>
 </html>
