Added images and updated Web Tech HW3 with images

--- a/3333_wh_ks.html
+++ b/3333_wh_ks.html
@@ -38,7 +38,7 @@
     /* Create three equal columns that floats next to each other */
     .column {
       float: left;
-      width: 45%;
+      width:  300px;
       padding: 15px;
     }
 
@@ -51,7 +51,6 @@
 
   </style>
 </head>
-
 
   <body>
 
@@ -69,20 +68,70 @@
     </div>
 
     <p>Enjoy the Scenic View!!</p>
+
+    <div>
+      <img src="images/Restaurant.jpeg" width="600" height="400">
+    </div>
+
     <div>This is a div.</div>
     <p><a href="http://www.usc.edu"> Explore Our Delicious Cuisines</a></p>
     <div>This is a div.</div>
 
-    <div class="row">
-      <div class="column">
-        <h2>Picture of Food</h2>
-        <p>Image of food to coming soon.</p>
-      </div>
 
+    <!-- Italian -->
+    <div class="row">
       <div class="column">
         <h2>Italy</h2>
         <p>Description of Italian Food coming soon. Description of Italian Food coming soon. Description of Italian Food coming soon.</p>
       </div>
+      <div class="column">
+        <h2>Picture of Food</h2>
+        <div>
+          <img src="images/italiancuisine.jpg" width="300" height="200">
+        </div>
+      </div>
+    </div>
+    <!-- Indian Cusiine -->
+    <div class="row">
+      <div class="column">
+        <h2>Picture of Food</h2>
+        <div>
+          <img src="images/IndianCuisine.jpg" width="300" height="200">
+        </div>
+      </div>
+
+      <div class="column">
+        <h2>Indian</h2>
+        <p>Description of Indian Food coming soon. Description of Italian Food coming soon. Description of Italian Food coming soon.</p>
+      </div>
+    </div>
+    <!-- Japanese -->
+    <div class="row">
+      <div class="column">
+        <h2>Japanese</h2>
+        <p>Description of Japanese Food coming soon. Description of Italian Food coming soon. Description of Italian Food coming soon.</p>
+      </div>
+      <div class="column">
+        <h2>Picture of Japanese Food</h2>
+        <div>
+          <img src="images/Japanese_Cuisine.jpg" width="300" height="200">
+        </div>
+      </div>
+    </div>
+    <!-- Desserts -->
+    <div class="row">
+      <div class="column">
+        <h2>Picture of Desserts</h2>
+        <div>
+          <img src="images/Desserts.jpg" width="300" height="200">
+        </div>
+      </div>
+
+      <div class="column">
+        <h2>Indian</h2>
+        <p>Description of Desserts Food coming soon. Description of Italian Food coming soon. Description of Italian Food coming soon.</p>
+      </div>
+    </div>
 
 
   </body>
