--- a/3333_wh_ks.html
+++ b/3333_wh_ks.html
@@ -9,8 +9,16 @@
       color: Navy;
       font-size: 15px;
     }
-    p {text-align: Left;}
-    div {text-align: Left;}
+    p {
+      text-align: Left;
+    }
+    div {
+      text-align: Left;
+    }
+    #contaier{
+      width: 1000px;
+
+    }
 
     /* Style the header */
       .header {
@@ -30,13 +38,39 @@
         display: block;
         text-align: center;
         font-family: Arial;
-        padding: 15px 10px;
+        padding: 10px 5px;
         text-decoration: none;
       }
 
       /* Change color on hover */
       .topnav a:hover {
         color: black;
+      }
+      /* Restaurant Background */
+      .module {
+        background:url(images/Restaurant.jpeg);
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size:800px 550px;
+        height:400px;
+        width: 800px;
+        position: relative;
+        overflow: hidden;
+        margin: 20px;
+      }
+      /* Style the Button */
+      .button {
+        border: Black;
+        color: Black;
+        font-style: Arial;
+        background-color: white;
+        white-space: nowrap;
+        padding: 15px 15px; <!-- outside the words, size of the button -->
+        text-decoration: none;
+        display: inline-block;
+        font-size: 12px;
+        margin: 00px 500px; <!-- outside the button -->
+        cursor: pointer;
       }
 
       /* Create three equal columns that floats next to each other */
@@ -47,58 +81,68 @@
       }
 
       /* Clear floats after the columns */
+      .row {
+        display: table;
+      }
+      /*
       .row:after {
         content: "";
         display: table;
         clear: both;
+        vertical-align: middle;
       }
+      *
       /* Style Image border */
-      .imgPeach{
+      img.PeachType{
         border: 10px solid PeachPuff;
+        width: 300px;
+        height: 250px;
       }
       /* Style Image border */
-      .imgBlue{
+      img.BlueType{
         border: 10px solid PowderBlue;
+        width: 300px;
+        height: 250px;
       }
-
-      /* Restaurant Background */
-      .module {
-        background:url(images/Restaurant.jpeg);
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-size: 1100px 550px;
-        height:700px;
-        position: relative;
-        overflow: hidden;
-        margin: 20px;
+      /* Centered for Restaurant */
+      .centered {
+        position: absolute;
+        top: 50%;
+        left: 50%;
       }
 
   </style>
 </head>
 
-  <body>
+  <body style="width:800px">
 
     <div class="header">
-      <h1>Trojan Cafe</h1>
+      <h1 style="color:Navy">Trojan Caf&eacute;</h1>
     </div>
 
-    <div class="topnav" style="padding:0px 50px">
+    <div class="topnav" style="padding:0px 30px">
       <a href="#">Home</a>
       <a href="#Italian">Italian</a>
       <a href="#Indian">Indian</a>
       <a href="#Japanese">Japanese</a>
       <a href="#Desserts">Desserts</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
+      <a href="Welcome.html">About</a>
+      <a href="Welcome.html">Contact</a>
     </div>
 
     <div class="module">
       <!--<img src="images/Restaurant.jpeg" width="600" height="400">-->
-      <b>
-        <p style="color:white;font-size:50px;text-align:Center;padding:100px"> Enjoy the Scenic View!!</p>
-      </b>
-    </div>
+      <div >
+        <b>
+          <p style="color:white;font-size:50px;text-align:Center"> Enjoy the Scenic View!!</p>
+        </b>
+        <div style="top:300px;left:300px">
+          <button class="button">Book Your Reservation <button>
+        </div>
+      </div>
+      <!-- Button for Book Reservation -->
 
+    </div>
     <p style="text-align:center;font-size:20px">
       <b>
           <font face= "Comic sans MS">
@@ -106,19 +150,17 @@
           </font>
       </b>
     </p>
-    <div>This is a div.</div>
-
 
     <!-- Italian -->
     <div class="row">
       <div class="column">
         <div>
-          <img class="imgPeach" src="images/italiancuisine.jpg" width="300" height="250">
+          <img class="PeachType" src="images/italiancuisine.jpg" >
         </div>
       </div>
-      <div class="column">
+      <div class="column" >
         <h2 id="Italian">Italy's Finest:</h2>
-        <p>From our Lasagna to our Protein Penne, we have delicious options for every taste.</p>
+        <p >From our Lasagna to our Protein Penne, we have delicious options for every taste.</p>
       </div>
     </div>
     <!-- Indian Cusiine -->
@@ -129,7 +171,7 @@
       </div>
       <div class="column">
         <div>
-          <img class="imgBlue" src="images/IndianCuisine.jpg" width="300" height="250">
+          <img class="BlueType" src="images/IndianCuisine.jpg">
         </div>
       </div>
     </div>
@@ -138,7 +180,7 @@
     <div class="row">
       <div class="column">
         <div id="Japanese">
-          <img class="imgPeach" src="images/Japanese_Cuisine.jpg" width="300" height="250">
+          <img class="PeachType" src="images/Japanese_Cuisine.jpg">
         </div>
       </div>
       <div class="column">
@@ -154,7 +196,7 @@
       </div>
       <div class="column">
         <div>
-          <img class="imgBlue" src="images/Desserts.jpg" width="300" height="250">
+          <img class="BlueType" src="images/Desserts.jpg">
         </div>
       </div>
     </div>
