Updated HW and added the Welcome link

--- a/3333_wh_ks.html
+++ b/3333_wh_ks.html
@@ -77,7 +77,7 @@
       .column {
         float: left;
         width:  300px;
-        padding: 15px;
+        padding: 50px; /* TODO UPDATE THIS TO BE DIFF FOR EACH */
       }
 
       /* Clear floats after the columns */
@@ -132,12 +132,12 @@
 
     <div class="module">
       <!--<img src="images/Restaurant.jpeg" width="600" height="400">-->
-      <div >
+      <div>
         <b>
-          <p style="color:white;font-size:50px;text-align:Center"> Enjoy the Scenic View!!</p>
+          <p style="color:white;font-size:50px;text-align:Center;"> Enjoy the Scenic View!!</p>
         </b>
-        <div style="top:300px;left:300px">
-          <button class="button">Book Your Reservation <button>
+        <div>
+          <button class="button">Book Your Reservation </button>
         </div>
       </div>
       <!-- Button for Book Reservation -->
@@ -200,7 +200,6 @@
         </div>
       </div>
     </div>
-
 
   </body>
 </html>
