More homework3 updates

--- a/3333_wh_ks.html
+++ b/3333_wh_ks.html
@@ -60,16 +60,18 @@
       }
       /* Style the Button */
       .button {
-        border: Black;
-        color: Black;
+        color: Black; /* text color */
         font-style: Arial;
         background-color: white;
+        border: 2px solid Black;
+        border-width:3px;
+        border-style: double;
         white-space: nowrap;
-        padding: 15px 15px; <!-- outside the words, size of the button -->
+        padding: 10px 10px; <!-- outside the words, size of the button -->
         text-decoration: none;
         display: inline-block;
         font-size: 12px;
-        margin: 00px 500px; <!-- outside the button -->
+        margin: -200px 500px; <!-- outside the button -->
         cursor: pointer;
       }
 
@@ -137,16 +139,13 @@
     </div>
 
     <div class="module">
-      <!--<img src="images/Restaurant.jpeg" width="600" height="400">-->
       <div>
-        <b>
-          <p style="color:white;font-size:50px;text-align:Center;"> Enjoy the Scenic View!!</p>
-        </b>
+          <b><p style="padding:70px;color:white;font-size:50px;text-align:Center;"> Enjoy the Scenic View!!</p></b>
+        <!-- Button for Book Reservation -->
         <div>
           <button class="button">Book Your Reservation </button>
         </div>
       </div>
-      <!-- Button for Book Reservation -->
 
     </div>
     <p style="text-align:center;font-size:20px">
