latest and greatest homework

--- a/3333_wh_ks.html
+++ b/3333_wh_ks.html
@@ -84,14 +84,14 @@
       /* Create three equal columns that floats next to each other */
       .columnPic {
         float: left;
-        width:  300px;
-        padding: 10px;
+        width:  400px;
+        padding: 00px;
       }
       /* Create three equal columns that floats next to each other */
       .columnTxt {
         float: left;
         width: 300px;
-        padding: 50px;
+        padding: 80px 40px;
       }
 
       /* Clear floats after the columns */
@@ -109,13 +109,13 @@
       /* Style Image border */
       img.PeachType{
         border: 10px solid PeachPuff;
-        width: 300px;
+        width: 330px;
         height: 250px;
       }
       /* Style Image border */
       img.BlueType{
         border: 10px solid PowderBlue;
-        width: 300px;
+        width: 330px;
         height: 250px;
       }
       /* Centered for Restaurant */
