--- a/3333_wh_ks.html
+++ b/3333_wh_ks.html
@@ -76,8 +76,8 @@
         padding: 10px 10px; <!-- outside the words, size of the button -->
         text-decoration: none;
         display: inline-block;
-        font-size: 12px;
-        margin: -200px 500px; <!-- outside the button -->
+        font-size: 14px;
+        margin: -200px 450px; <!-- outside the button -->
         cursor: pointer;
       }
 
@@ -91,12 +91,13 @@
       .columnTxt {
         float: left;
         width: 300px;
-        padding: 80px 40px;
+        padding: 80px 30px;
       }
 
       /* Clear floats after the columns */
       .row {
         display: table;
+        padding: 20px;
       }
       /*
       .row:after {
@@ -125,16 +126,17 @@
         left: 50%;
       }
       .scenic {
-        padding: 70px;
+        padding: 70px 0px 0px 0px;
+        font-family: "Times New Roman";
         color: white;
-        font-size: 50px;
+        font-size: 45px;
         text-align: Center;
       }
 
   </style>
 </head>
 
-  <body style="width:801px">
+  <body style="width:801px;margin:0px;overflow-x: hidden;">
 
     <div class="header">
       <h1 style="color:Navy">Trojan Caf&eacute;</h1>
@@ -163,7 +165,7 @@
     <p style="text-align:center;font-size:20px">
       <b>
           <font face= "Comic sans MS">
-            <a href="http://www.usc.edu"> Explore Our Delicious Cuisines</a>
+            <a style="border-bottom:5px double;color:Purple"> Explore Our Delicious Cuisines</a>
           </font>
       </b>
     </p>
