--- a/3333_wh_ks.html
+++ b/3333_wh_ks.html
@@ -36,6 +36,7 @@
       .topnav {
         overflow: hidden;
         background-color: PeachPuff;
+        padding: 0px 70px;
       }
 
       /* Style the Navigation links */
@@ -48,10 +49,6 @@
         text-decoration: none;
       }
 
-      /* Change color on hover */
-      .topnav a:hover {
-        color: black;
-      }
       /* Restaurant Background */
       .module {
         background:url(images/Restaurant.jpeg);
@@ -90,7 +87,7 @@
       /* Create three equal columns that floats next to each other */
       .columnTxt {
         float: left;
-        width: 300px;
+        width: 290px;
         padding: 80px 30px;
       }
 
@@ -136,13 +133,13 @@
   </style>
 </head>
 
-  <body style="width:801px;margin:0px;overflow-x: hidden;">
+  <body style="width:901px;margin:0px;overflow-x: hidden;">
 
     <div class="header">
       <h1 style="color:Navy">Trojan Caf&eacute;</h1>
     </div>
 
-    <div class="topnav" style="padding:0px 30px">
+    <div class="topnav">
       <a href="#">Home</a>
       <a href="#Italian">Italian</a>
       <a href="#Indian">Indian</a>
@@ -152,6 +149,7 @@
       <a href="Welcome.html">Contact</a>
     </div>
 
+<div style="padding:0px 50px">
     <div class="module">
       <div>
           <b><p class="scenic"> Enjoy the Scenic View!!</p></b>
@@ -219,6 +217,6 @@
         </div>
       </div>
     </div>
-
+</div>
   </body>
 </html>
