Updated so the button has the pointer cursor show up correctly

--- a/3333_wh_ks.html
+++ b/3333_wh_ks.html
@@ -70,11 +70,11 @@
         border-width:3px;
         border-style: double;
         white-space: nowrap;
-        padding: 10px 10px; <!-- outside the words, size of the button -->
+        padding: 10px 10px; /*<!-- outside the words, size of the button -->*/
         text-decoration: none;
         display: inline-block;
         font-size: 14px;
-        margin: -200px 450px; <!-- outside the button -->
+        margin: -200px 450px; /*<!-- outside the button -->*/
         cursor: pointer;
       }
 
