Updated Homework table

--- a/schoeyz12.html
+++ b/schoeyz12.html
@@ -28,23 +28,18 @@ background-color: #dddddd;
 <table>
   <tr>
     <th> Homework </th>
-    <th> link </th>
   </tr>
   <tr>
-    <td>HW #3:</td>
-    <td>link</td>
+    <td href="kellyscho.github.io/3333_wh_ks.html">HW #3 Link</td>
   </tr>
   <tr>
     <td>HW #6:</td>
-    <td>link</td>
   </tr>
   <tr>
     <td>HW #8:</td>
-    <td>link</td>
   </tr>
   <tr>
     <td>HW #9:</td>
-    <td>link</td>
   </tr>
 </table>
 
