--- a/schoeyz12.html
+++ b/schoeyz12.html
@@ -30,7 +30,7 @@ background-color: #dddddd;
     <th> Homework </th>
   </tr>
   <tr>
-    <td> <a href="3333_wh_ks.html">HW #3 Link</a></td>
+    <td> <a href="3_KAS_yeoz\HW3_home.html">HW #3 Link</a></td>
   </tr>
   <tr>
     <td>HW #6:</td>
