Added minor final updates

--- a/3_KAS_yeoz/HW3_home.html
+++ b/3_KAS_yeoz/HW3_home.html
@@ -36,7 +36,7 @@
         padding: 0px 70px;
       }
 
-      /* Style the Navigation links */
+      /* Style the top Navigation bar links */
       .topnav a {
         float: left;
         display: block;
