Updated Homework 6 link

--- a/schoeyz12.html
+++ b/schoeyz12.html
@@ -33,7 +33,7 @@ background-color: #dddddd;
     <td> <a href="3_KAS_yeoz\HW3_home.html">HW #3 Link</a></td>
   </tr>
   <tr>
-    <td>HW #6:</td>
+    <td> <a href="https://hw6-kellyschofield.azurewebsites.net/"> HW #6 Link</a></td>
   </tr>
   <tr>
     <td>HW #8:</td>
