--- a/schoeyz12.html
+++ b/schoeyz12.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Kelly's CSCI571 Homeworks</title>
+<title>Kelly's CSCI571 Homeworks - Spring 2021</title>
 <style>
 table {
 font-family: arial, sans-serif;
@@ -33,7 +33,10 @@ background-color: #dddddd;
     <td> <a href="3_KAS_yeoz\HW3_home.html">HW #3 Link</a></td>
   </tr>
   <tr>
-    <td> <a href="https://hw6-kellyschofield.azurewebsites.net/"> HW #6 Link</a></td>
+    <td> <p>HW #6Links:</p>
+      <p><a href="https://hw6-kellyschofield.azurewebsites.net/"> Front End Azure link</a></p>
+      <p><a href="https://hw6-kellyschofield.azurewebsites.net/trending"> Backend Trending Movies API call</a></p>
+    </td>
   </tr>
   <tr>
     <td>HW #8:</td>
