Updated Homework 8 Link

--- a/schoeyz12.html
+++ b/schoeyz12.html
@@ -39,7 +39,9 @@ background-color: #dddddd;
     </td>
   </tr>
   <tr>
-    <td>HW #8:</td>
+    <td>HW #8 Links:</td>
+    <p><a href="https://csci571-hello-world.ue.r.appspot.com/"> Front End GCP Link</a></p>
+    <p><a>Back End API Call Link </a</p>
   </tr>
   <tr>
     <td>HW #9:</td>
