Update hw 8 link to include json backend link

--- a/schoeyz12.html
+++ b/schoeyz12.html
@@ -39,9 +39,10 @@ background-color: #dddddd;
     </td>
   </tr>
   <tr>
-    <td>HW #8 Links:</td>
-    <p><a href="https://csci571-hello-world.ue.r.appspot.com/"> Front End GCP Link</a></p>
-    <p><a>Back End API Call Link </a</p>
+    <td><p> HW #8 Links: </p>
+      <p><a href="https://csci571-hello-world.ue.r.appspot.com/"> Front End GCP Link</a></p>
+      <p><a href="https://csci571-hello-world.ue.r.appspot.com/homepage/trendingtv">Back End API Call Link: Trending TV Shows </a</p>
+    </td>
   </tr>
   <tr>
     <td>HW #9:</td>
