Updated back end link for Homework 9

--- a/schoeyz12.html
+++ b/schoeyz12.html
@@ -46,6 +46,7 @@ background-color: #dddddd;
   </tr>
   <tr>
     <td>HW #9:</td>
+    <p><a href="https://csci571-hello-world.ue.r.appspot.com/homepage/trendingtv">Back End API Call using GCP: Trending TV Shows </a</p>
   </tr>
 </table>
 
