update website to include information about me and links

--- a/index.html
+++ b/index.html
@@ -1,1 +1,265 @@
-Hello World its Kelly
+<!DOCTYPE HTML>
+<!--
+	Stellar by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Stellar by HTML5 UP</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Header -->
+					<header id="header" class="alt">
+						<span class="logo"><img src="images/logo.svg" alt="" /></span>
+						<h1>Kelly Schofield</h1>
+						<p>Embedded Software Engineer<br />
+						built by <a href="https://www.linkedin.com/in/kelly-schofield-ba02914b/">Kelly</a></p>
+					</header>
+
+				<!-- Nav -->
+					<nav id="nav">
+						<ul>
+							<li><a href="#intro" class="active">About Me</a></li>
+							<li><a href="#first">Experience</a></li>
+							<li><a href="#education">Education</a></li>
+							<li><a href="#numbers">Outside Work</a></li>
+							<!-- <li><a href="#4k-for-cancer">4K for Cancer</a></li> -->
+						</ul>
+					</nav>
+
+				<!-- Main -->
+					<div id="main">
+
+						<!-- Introduction -->
+							<section id="intro" class="main">
+								<div class="spotlight">
+									<div class="content">
+										<header class="major">
+											<h2>About Kelly</h2>
+										</header>
+										<p>Engineer</p>
+										<p>Ski, bike, run</p>
+										<p><a href="https://ppubs.uspto.gov/pubwebapp/">US Patent Number: 20200082729</a></p>
+										<ul class="actions">
+											<li><a href="https://www.linkedin.com/in/kelly-schofield-ba02914b/" class="button">My LinkedIn</a></li>
+										</ul>
+									</div>
+									<span class="image"><img src="images/Kelly_USC_Graduation.JPG" alt="" /></span>
+								</div>
+							</section>
+
+						<!-- Experience Section -->
+						<section id="first" class="main special">
+							<header class="major">
+								<h2>Experience</h2>
+							</header>
+							<header class="major">
+								<h3>The Boeing Company</h3> 
+							</header>
+							<header class="minor">
+								<h3>Embedded Software Engineer - 737 Flight Management System</h3> 
+							</header>
+							<header class="minor">
+								<h3>Embedded Software Engineer - T-7A Avionics</h3> 
+							</header>
+							<header class="minor">
+								<!-- - Add Link to the below????? -->
+								<h3>Multi-Skill Engineer - Engineering Career Foundation Program</h3> 
+							</header>
+							
+
+						</section>
+						<!-- Education Section -->
+						<section id="education" class="main special">
+							<header class="major">
+								<h2>Education</h2>
+							</header>
+							<ul class="actions special" style="margin-bottom: 0.2rem;">
+								<img src="images/VT_logo.jpeg" alt="" class="logos" />
+								<header class="major">
+									<h3>Virginia Tech</h3> 
+								</header>	
+							</ul>
+							<ul class="actions special" style="margin-bottom: 0.2rem;">
+								<img src="images/USC_logo.jpeg" alt="" class="logos" />
+								<header class="major">
+									<h3>University of Southern California</h3> 
+								</header>	
+							</ul>
+							<ul class="actions special" style="margin-bottom: 0.2rem;">
+								<img src="images/Canterbury_logo.jpeg" alt="" class="logos" />
+								<header class="major">
+									<h3>University of Canterbury</h3> 
+								</header>	
+							</ul>
+						</section>
+
+						<!-- First Section
+							<section id="first" class="main special">
+								<header class="major">
+									<h2>Put my Experience in this section?</h2>
+								</header>
+								<ul class="features">
+									<li>
+										<span class="icon solid major style1 fa-code"></span>
+										<h3>Ipsum consequat</h3>
+										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+									</li>
+									<li>
+										<span class="icon major style3 fa-copy"></span>
+										<h3>Amed sed feugiat</h3>
+										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+									</li>
+									<li>
+										<span class="icon major style5 fa-gem"></span>
+										<h3>Dolor nullam</h3>
+										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+									</li>
+								</ul>
+								<footer class="major">
+									<ul class="actions special">
+										<li><a href="generic.html" class="button">Learn More</a></li>
+									</ul>
+								</footer>
+							</section> -->
+
+						<!-- Second Section -->
+							<section id="numbers" class="main special">
+								<header class="major">
+									<h2>Numbers</h2>
+								</header>
+								<ul class="statistics">
+									<li class="style1">
+										<span class="icon solid fa-code-branch"></span>
+										<strong>14</strong> Triathlons
+									</li>
+									<li class="style2">
+										<span class="icon fa-folder-open"></span>
+										<strong>21</strong> Countries <!--1)US, 2)Canada, Jamaica, UK,  5)NZ, Australia, Thailand, Netherlands, Germany, 10)Czech Republic, Austria, Switzerland, France, Belgium, 15)Mexico, Iceland, Costa Rica, Turkey, India, 20) Bahamas, Dominican Republic-->
+									</li>
+									<li class="style3">
+										<span class="icon solid fa-signal"></span>
+										<strong>33</strong> States High Points
+									</li>
+									<li class="style4">
+										<span class="icon solid fa-laptop"></span>
+										<strong>3</strong> Marathons	
+									</li>
+									<li class="style5">
+										<span class="icon fa-gem"></span>
+										<strong>8</strong>bits in a byte
+									</li>
+								</ul>
+								<p class="content">I enjoy skiing, biking, running, traveling, and numbers.   I need a 5th stat! maybe # of mountains I have skied? </p>
+								<footer class="major">
+									<ul class="actions special">
+										<li><a href="https://www.strava.com/athletes/6619344" class="button">Learn More: My Strava</a></li>
+									</ul>
+								</footer>
+							</section>
+
+						<!-- Get Started
+							<section id="cta" class="main special">
+								<header class="major">
+									<h2>Outside of Work</h2>
+									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
+									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+								</header>
+								<footer class="major">
+									<ul class="actions special">
+										<li><a href="generic.html" class="button primary">Get Started</a></li>
+										<li><a href="generic.html" class="button">Learn More</a></li>
+									</ul>
+								</footer>
+							</section> -->
+
+						<!-- 4K for Cancer Section -->
+						<section id="4k-for-cancer" class="main special">
+							<header class="major">
+								<h2>4K for Cancer 2012</h2>
+								<p>Cross-country bike trip from Baltimore, MD to San Francisco, CA</p>
+							</header>
+							<div class="spotlight">
+								<div class="content">
+									<p>In the summer of 2012, I embarked on an incredible journey cycling across the United States from Baltimore to San Francisco. This epic adventure covered over 4,000 miles through 15 states, taking 70 days to complete. The trip included challenging mountain passes in Colorado, scenic routes through national parks in Utah, and unforgettable experiences across America's heartland.</p>
+									<ul class="statistics">
+										<li class="style1">
+											<span class="icon solid fa-road"></span>
+											<strong>4,000+</strong> Miles
+										</li>
+										<li class="style2">
+											<span class="icon solid fa-calendar-alt"></span>
+											<strong>70</strong> Days
+										</li>
+										<li class="style3">
+											<span class="icon solid fa-map-marked-alt"></span>
+											<strong>15</strong> States
+										</li>
+									</ul>
+								</div>
+								<div class="image">
+									<iframe src="4kForCancer2012-embed.html" width="700" height="300" style="border: none; border-radius: 8px;" title="4K for Cancer 2012 Interactive Map"></iframe>
+								</div>
+							</div>
+							<footer class="major">
+								<ul class="actions special">
+									<li><a href="4kForCancer2012.html" class="button primary">View Interactive Map</a></li>
+								</ul>
+							</footer>
+						</section>
+
+					</div>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<section>
+							<h2>Created by Kelly</h2>
+							<p>Thanks for making it this far on the website!</p>
+							<ul class="actions">
+								<li><a href="https://www.linkedin.com/in/kelly-schofield-ba02914b/" class="button">Learn More</a></li>
+							</ul>
+						</section>
+						<section>
+							<h2>More Info</h2>
+							<dl class="alt">
+								<dt>Address</dt>
+								<dd>1234 a street Rd &bull; City, Earth 00000 &bull; USA</dd>
+								<dt>Phone</dt>
+								<dd>(000) 000-0000 x 0000</dd>
+								<dt>Email</dt>
+								<dd><a href="#">anEmailAddress@gmail.com</a></dd>
+							</dl>
+							<ul class="icons">
+								<!-- <li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li> -->
+								<!-- <li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li> -->
+								<!-- <li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li> -->
+								<li><a href="https://github.com/kellyscho/kellyscho.github.io" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+								<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
+							</ul>
+						</section>
+						<!-- Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>. -->
+						<p class="copyright">&copy; Kelly's Websites</p>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
